--- a/24RoadPack/de.lproj/MainStoryboard.storyboard
+++ b/24RoadPack/de.lproj/MainStoryboard.storyboard
@@ -77,7 +77,7 @@
                                     <constraint firstAttribute="width" constant="132" id="Uk2-4O-eBH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                 <connections>
                                     <outlet property="delegate" destination="2" id="Gl5-ea-ZQl"/>
                                 </connections>
@@ -468,21 +468,6 @@
             <point key="canvasLocation" x="1309" y="122"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="RoadPackTrackerViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RoadPackTrackerViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onDownloadRouteButtonClicked:"/>
-                <relationship kind="action" name="onStartTrackingButtonClicked:"/>
-                <relationship kind="outlet" name="downloadRouteButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-                <relationship kind="outlet" name="textFieldJobId" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
