--- a/24RoadPack/en.lproj/MainStoryboard.storyboard
+++ b/24RoadPack/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0PR-WU-6ms">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0PR-WU-6ms">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -36,7 +36,11 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z7d-Pc-UhC">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z7d-Pc-UhC">
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Huu-Qt-qnq"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Download Route">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -49,14 +53,15 @@
                                     <action selector="onDownloadRouteButtonClicked:" destination="2" eventType="touchUpInside" id="k6a-IU-epo"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m5m-06-qIT">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m5m-06-qIT">
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="132" id="943-2l-WyB"/>
+                                    <constraint firstAttribute="height" constant="44" id="qLO-fR-hKb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Start">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -65,9 +70,11 @@
                                     <action selector="onStartTrackingButtonClicked:" destination="2" eventType="touchUpInside" id="AmQ-Xc-AJe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5i-NM-r0h">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5i-NM-r0h">
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="132" id="bqH-4Z-mIp"/>
+                                    <constraint firstAttribute="height" constant="44" id="dly-nq-QfP"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Stop">
@@ -77,6 +84,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="onStopTrackingButtonClicked:" destination="2" eventType="touchUpInside" id="Fqi-Wu-9LE"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IGd-kg-rEx">
                                 <constraints>
@@ -97,15 +107,15 @@
                             <constraint firstItem="m5m-06-qIT" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="8iQ-jK-jFz"/>
                             <constraint firstItem="IGd-kg-rEx" firstAttribute="centerY" secondItem="byC-ZT-Pzc" secondAttribute="centerY" type="user" id="Ard-xb-vRx"/>
                             <constraint firstAttribute="trailing" secondItem="IGd-kg-rEx" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="DXD-5H-XjY"/>
-                            <constraint firstItem="m5m-06-qIT" firstAttribute="top" secondItem="3" secondAttribute="top" constant="122" id="G5a-4c-CBz"/>
                             <constraint firstItem="byC-ZT-Pzc" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="HRD-XL-DBc"/>
-                            <constraint firstItem="h5i-NM-r0h" firstAttribute="baseline" secondItem="m5m-06-qIT" secondAttribute="baseline" type="default" id="HSN-gR-qzS"/>
                             <constraint firstItem="Px8-Es-8iC" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="RS6-rY-kIx"/>
                             <constraint firstItem="z7d-Pc-UhC" firstAttribute="top" secondItem="3" secondAttribute="top" constant="70" id="UsF-Q1-vFg"/>
                             <constraint firstAttribute="trailing" secondItem="h5i-NM-r0h" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Vdm-Lh-y7l"/>
                             <constraint firstItem="z7d-Pc-UhC" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="YdN-LC-DLu"/>
                             <constraint firstItem="Px8-Es-8iC" firstAttribute="top" secondItem="3" secondAttribute="top" constant="197" id="abF-IO-dZ3"/>
                             <constraint firstItem="IGd-kg-rEx" firstAttribute="top" secondItem="3" secondAttribute="top" constant="23" id="aub-U4-Hz6"/>
+                            <constraint firstItem="h5i-NM-r0h" firstAttribute="top" secondItem="3" secondAttribute="top" constant="123" id="d6s-P9-v1H"/>
+                            <constraint firstItem="m5m-06-qIT" firstAttribute="top" secondItem="z7d-Pc-UhC" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="jaB-0J-Gyh"/>
                             <constraint firstAttribute="trailing" secondItem="z7d-Pc-UhC" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rWv-I5-ljv"/>
                         </constraints>
                     </view>
@@ -113,6 +123,8 @@
                     <connections>
                         <outlet property="downloadRouteButton" destination="z7d-Pc-UhC" id="td8-Yh-pm7"/>
                         <outlet property="mapView" destination="Px8-Es-8iC" id="XRo-QI-XuP"/>
+                        <outlet property="startButton" destination="m5m-06-qIT" id="F4i-Jk-29E"/>
+                        <outlet property="stopButton" destination="h5i-NM-r0h" id="ekN-UD-5hL"/>
                         <outlet property="textFieldJobId" destination="IGd-kg-rEx" id="g1o-qw-VXv"/>
                     </connections>
                 </viewController>
@@ -470,21 +482,6 @@
             <point key="canvasLocation" x="1309" y="122"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="RoadPackTrackerViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RoadPackTrackerViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onDownloadRouteButtonClicked:"/>
-                <relationship kind="action" name="onStartTrackingButtonClicked:"/>
-                <relationship kind="outlet" name="downloadRouteButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-                <relationship kind="outlet" name="textFieldJobId" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
